--- a/index.html
+++ b/index.html
@@ -280,12 +280,12 @@
 					  </div>
 					  <div id="page-3" class= "page three">
 					  	<h2 class="heading">Skills</h2>
-					  	<div class="row progress-circle mb-5">
+					  	<!--<div class="row progress-circle mb-5">
 					  		<div class="col-lg-4 mb-4">
 						      <div class="bg-white rounded-lg shadow p-4">
-						        <h2 class="h5 font-weight-bold text-center mb-4">CSS</h2>
+						        <h2 class="h5 font-weight-bold text-center mb-4">.NET</h2>
 
-						        <!-- Progress bar 1 -->
+						        &lt;!&ndash; Progress bar 1 &ndash;&gt;
 						        <div class="progress mx-auto" data-value='90'>
 						          <span class="progress-left">
                         <span class="progress-bar border-primary"></span>
@@ -297,9 +297,9 @@
 						            <div class="h2 font-weight-bold">90<sup class="small">%</sup></div>
 						          </div>
 						        </div>
-						        <!-- END -->
+						        &lt;!&ndash; END &ndash;&gt;
 
-						        <!-- Demo info -->
+						        &lt;!&ndash; Demo info &ndash;&gt;
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
 						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
@@ -308,7 +308,7 @@
 						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
 						          </div>
 						        </div>
-						        <!-- END -->
+						        &lt;!&ndash; END &ndash;&gt;
 						      </div>
 						    </div>
 
@@ -316,7 +316,7 @@
 						      <div class="bg-white rounded-lg shadow p-4">
 						        <h2 class="h5 font-weight-bold text-center mb-4">HTML</h2>
 
-						        <!-- Progress bar 1 -->
+						        &lt;!&ndash; Progress bar 1 &ndash;&gt;
 						        <div class="progress mx-auto" data-value='80'>
 						          <span class="progress-left">
                         <span class="progress-bar border-primary"></span>
@@ -328,9 +328,9 @@
 						            <div class="h2 font-weight-bold">80<sup class="small">%</sup></div>
 						          </div>
 						        </div>
-						        <!-- END -->
+						        &lt;!&ndash; END &ndash;&gt;
 
-						        <!-- Demo info -->
+						        &lt;!&ndash; Demo info &ndash;&gt;
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
 						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
@@ -339,7 +339,7 @@
 						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
 						          </div>
 						        </div>
-						        <!-- END -->
+						        &lt;!&ndash; END &ndash;&gt;
 						      </div>
 						    </div>
 
@@ -347,7 +347,7 @@
 						      <div class="bg-white rounded-lg shadow p-4">
 						        <h2 class="h5 font-weight-bold text-center mb-4">jQuery</h2>
 
-						        <!-- Progress bar 1 -->
+						        &lt;!&ndash; Progress bar 1 &ndash;&gt;
 						        <div class="progress mx-auto" data-value='75'>
 						          <span class="progress-left">
                         <span class="progress-bar border-primary"></span>
@@ -359,9 +359,9 @@
 						            <div class="h2 font-weight-bold">75<sup class="small">%</sup></div>
 						          </div>
 						        </div>
-						        <!-- END -->
+						        &lt;!&ndash; END &ndash;&gt;
 
-						        <!-- Demo info -->
+						        &lt;!&ndash; Demo info &ndash;&gt;
 						        <div class="row text-center mt-4">
 						          <div class="col-6 border-right">
 						            <div class="h4 font-weight-bold mb-0">28%</div><span class="small text-gray">Last week</span>
@@ -370,14 +370,14 @@
 						            <div class="h4 font-weight-bold mb-0">60%</div><span class="small text-gray">Last month</span>
 						          </div>
 						        </div>
-						        <!-- END -->
+						        &lt;!&ndash; END &ndash;&gt;
 						      </div>
 						    </div>
-					  	</div>
+					  	</div>-->
 					  	<div class="row">
 					  		<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>Photoshop</h3>
+										<h3>.NET Core & Framework</h3>
 										<div class="progress">
 										 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -388,12 +388,78 @@
 								</div>
 								<div class="col-md-6 animate-box">
 									<div class="progress-wrap ftco-animate">
-										<h3>jQuery</h3>
+										<h3>Java</h3>
 										<div class="progress">
-										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="85"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-										    <span>85%</span>
+										 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="65"
+										  	aria-valuemin="0" aria-valuemax="100" style="width:65%">
+										    <span>65%</span>
 										  	</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>SQL</h3>
+										<div class="progress">
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
+												 aria-valuemin="0" aria-valuemax="100" style="width:80%">
+												<span>80%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Data Structures</h3>
+										<div class="progress">
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
+												 aria-valuemin="0" aria-valuemax="100" style="width:75%">
+												<span>75%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Azure</h3>
+										<div class="progress">
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="70"
+												 aria-valuemin="0" aria-valuemax="100" style="width:70%">
+												<span>70%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>AWS</h3>
+										<div class="progress">
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="80"
+												 aria-valuemin="0" aria-valuemax="100" style="width:80%">
+												<span>80%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>React</h3>
+										<div class="progress">
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
+												 aria-valuemin="0" aria-valuemax="100" style="width:60%">
+												<span>60%</span>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6 animate-box">
+									<div class="progress-wrap ftco-animate">
+										<h3>Javascript</h3>
+										<div class="progress">
+											<div class="progress-bar color-2" role="progressbar" aria-valuenow="60"
+												 aria-valuemin="0" aria-valuemax="100" style="width:60%">
+												<span>60%</span>
+											</div>
 										</div>
 									</div>
 								</div>
@@ -415,28 +481,6 @@
 										 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 										  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
 										    <span>90%</span>
-										  	</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 animate-box">
-									<div class="progress-wrap ftco-animate">
-										<h3>WordPress</h3>
-										<div class="progress">
-										 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-										    <span>70%</span>
-										  	</div>
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6 animate-box">
-									<div class="progress-wrap ftco-animate">
-										<h3>SEO</h3>
-										<div class="progress">
-										 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-										  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-										    <span>80%</span>
 										  	</div>
 										</div>
 									</div>
@@ -575,9 +619,8 @@
 				</div>
     	</div>
     </section>
- 
 
-    <section class="ftco-section ftco-project" id="projects-section">
+    <!--<section class="ftco-section ftco-project" id="projects-section">
     	<div class="container-fluid px-md-0">
     		<div class="row no-gutters justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -644,7 +687,7 @@
     			</div>
     		</div>
     	</div>
-    </section>
+    </section>-->
 
     <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     	<div class="container-fluid px-md-5">
