--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
+		    					<span class="date">2024</span>
 		    					<h2>Top 10 Web Developer</h2>
 		    					<span class="position">Cambridge University</span>
 		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
