--- a/index.html
+++ b/index.html
@@ -495,9 +495,9 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2024</span>
-		    					<h2>Top 10 Web Developer</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<h2>AI Hackathon - Practical Application</h2>
+		    					<span class="position">3Eco</span>
+		    					<p>Won the AI Hackathon (Practical Applications category) with a project that uses GPT to automate code and database change suggestions for JIRA tickets. By integrating a codebase and database schema as context, our solution analyzes ticket details and provides developers with targeted, actionable recommendations, enhancing productivity and streamlining workflows.</p>
 	    					</div>
 	    				</div>
 	    				<div class="resume-wrap d-flex ftco-animate">
@@ -505,32 +505,10 @@
 					    		<span class="flaticon-ideas"></span>
 					    	</div>
 					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Top 5 LeaderShip Exellence Winner</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Top 4 Web Tester</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-		    				</div>
-	    				</div>
-	    				<div class="resume-wrap d-flex ftco-animate">
-	    					<div class="icon d-flex align-items-center justify-content-center">
-					    		<span class="flaticon-ideas"></span>
-					    	</div>
-					    	<div class="text pl-3">
-		    					<span class="date">2014-2015</span>
-		    					<h2>Art &amp; Creative Director</h2>
-		    					<span class="position">Cambridge University</span>
-		    					<p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+		    					<span class="date">2017</span>
+		    					<h2>Mathematics Olympiad</h2>
+		    					<span class="position">Sukkur IBA University</span>
+		    					<p>Winner of the 2017 Mathematics Olympiad organized by Sukkur IBA University.</p>
 		    				</div>
 	    				</div>
 					  </div>
@@ -545,7 +523,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Services</h1>
             <h2 class="mb-4">Services</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Crafting Intelligent Solutions for Tomorrow's Challenges</p>
           </div>
         </div>
     		<div class="row">
@@ -555,8 +533,8 @@
 								<i class="flaticon-analysis"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Web Design</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">Web Development</h3>
+								<p>Full-stack expertise in .NET, Angular, and Java for building reliable web applications.</p>
 							</div>
 						</a>
 					</div>
@@ -566,8 +544,8 @@
 								<i class="flaticon-flasks"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Phtography</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">Performance Optimization</h3>
+								<p>Enhancing code, database queries, and caching for peak performance.</p>
 							</div>
 						</a>
 					</div>
@@ -577,8 +555,8 @@
 								<i class="flaticon-ideas"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Web Developer</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">API Development & Integration</h3>
+								<p>Building efficient and scalable APIs for complex backend systems, including integration with existing platforms.</p>
 							</div>
 						</a>
 					</div>
@@ -589,8 +567,8 @@
 								<i class="flaticon-innovation"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">App Developing</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">Mobile App Development</h3>
+								<p>Creating intuitive, high-performance mobile applications tailored to user needs.</p>
 							</div>
 						</a>
 					</div>
@@ -600,8 +578,8 @@
 								<i class="flaticon-ux-design"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Branding</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">Cloud Solutions</h3>
+								<p>Implementation and optimization of cloud services (AWS, Azure), including AWS Lambda, CloudWatch, and Azure Functions, for automation and monitoring.</p>
 							</div>
 						</a>
 					</div>
@@ -611,8 +589,8 @@
 								<i class="flaticon-idea"></i>
 							</span>
 							<div class="desc">
-								<h3 class="mb-5">Product Strategy</h3>
-								<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+								<h3 class="mb-5">Technical Leadership</h3>
+								<p>Guiding teams, leading projects, and mentoring in agile and startup settings.</p>
 							</div>
 						</a>
 					</div>
@@ -695,7 +673,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="100">0</strong>
+                <strong class="number" data-number="2">0</strong>
                 <span>Awards</span>
               </div>
             </div>
@@ -703,7 +681,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="1200">0</strong>
+                <strong class="number" data-number="12">0</strong>
                 <span>Complete Projects</span>
               </div>
             </div>
@@ -711,7 +689,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18 shadow">
               <div class="text">
-                <strong class="number" data-number="1200">0</strong>
+                <strong class="number" data-number="8">0</strong>
                 <span>Happy Customers</span>
               </div>
             </div>
@@ -729,7 +707,7 @@
     </section>
 
 
-    <section class="ftco-section" id="blog-section">
+    <!--<section class="ftco-section" id="blog-section">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-5">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -792,7 +770,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section>-->
 
     <section class="ftco-section ftco-hireme img" style="background-image: url(images/bg_1.jpg)">
     	<div class="overlay"></div>
@@ -800,7 +778,7 @@
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+						<p>Let’s bring your vision to life with innovative, reliable, and efficient tech solutions!</p>
 						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
@@ -813,7 +791,7 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p>Let’s build something extraordinary together!</p>
           </div>
         </div>
 
@@ -825,7 +803,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Address</h3>
-		            <p>198 West 21th Street, Suite 721 New York NY 10016</p>
+		            <p>Lahore, Pakistan</p>
 		          </div>
 	          </div>
           </div>
@@ -836,7 +814,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+ 1235 2355 98</a></p>
+		            <p><a href="tel://1234567920">+ 92 333 3834354</a></p>
 	            </div>
 	          </div>
           </div>
@@ -847,7 +825,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+		            <p><a href="mailto:iamwaqarrao@gmail.com">iamwaqarrao@gmail.com</a></p>
 		          </div>
 	          </div>
           </div>
@@ -858,7 +836,7 @@
           		</div>
           		<div>
 	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="#">yoursite.com</a></p>
+		            <p><a href="https://www.linkedin.com/in/wrvicky/">LinkedIn</a></p>
 	            </div>
 	          </div>
           </div>
@@ -900,11 +878,11 @@
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
               <h2 class="ftco-heading-2">About</h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+              <p>Passionate Software Engineer with a flair for innovative solutions in .NET, Angular, AWS, and AI. I turn complex challenges into streamlined, efficient applications. Let’s create something amazing together!</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/wrvicky/"><span class="icon-linkedin"></span></a></li>
                 <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.instagram.com/waqar354"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
           </div>
@@ -915,7 +893,6 @@
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Home</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>About</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Services</a></li>
-                <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Projects</a></li>
                 <li><a href="#"><span class="icon-long-arrow-right mr-2"></span>Contact</a></li>
               </ul>
             </div>
@@ -937,9 +914,9 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">Lahore, Pakistan</span></li>
+	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+92 333 3834 354</span></a></li>
+	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">iamwaqarrao@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
@@ -949,7 +926,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
