--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
-	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
-	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
+	          <!--<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>-->
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -102,7 +102,7 @@
 	                <span class="number" data-number="12">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="./resume.pdf" download="Waqar-Rao.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -779,7 +779,7 @@
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
 						<p>Let’s bring your vision to life with innovative, reliable, and efficient tech solutions!</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
+						<p class="mb-0"><a href="https://www.upwork.com/freelancers/~01d2cee3af27b32c03" target="_blank" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
 			</div>
@@ -794,52 +794,51 @@
             <p>Let’s build something extraordinary together!</p>
           </div>
         </div>
-
         <div class="row d-flex contact-info mb-5">
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box text-center p-4 shadow">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-map-signs"></span>
-          		</div>
-          		<div>
-	          		<h3 class="mb-4">Address</h3>
-		            <p>Lahore, Pakistan</p>
-		          </div>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box text-center p-4 shadow">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-phone2"></span>
-          		</div>
-          		<div>
-	          		<h3 class="mb-4">Contact Number</h3>
-		            <p><a href="tel://1234567920">+ 92 333 3834354</a></p>
-	            </div>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box text-center p-4 shadow">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-paper-plane"></span>
-          		</div>
-          		<div>
-	          		<h3 class="mb-4">Email Address</h3>
-		            <p><a href="mailto:iamwaqarrao@gmail.com">iamwaqarrao@gmail.com</a></p>
-		          </div>
-	          </div>
-          </div>
-          <div class="col-md-6 col-lg-3 d-flex ftco-animate">
-          	<div class="align-self-stretch box text-center p-4 shadow">
-          		<div class="icon d-flex align-items-center justify-content-center">
-          			<span class="icon-globe"></span>
-          		</div>
-          		<div>
-	          		<h3 class="mb-4">Website</h3>
-		            <p><a href="https://www.linkedin.com/in/wrvicky/">LinkedIn</a></p>
-	            </div>
-	          </div>
-          </div>
+			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+				<div class="align-self-stretch box text-center p-4 shadow">
+					<div class="icon d-flex align-items-center justify-content-center">
+						<span class="icon-paper-plane"></span>
+					</div>
+					<div>
+						<h3 class="mb-4">Email Address</h3>
+						<p><a href="mailto:iamwaqarrao@gmail.com" target="_blank">iamwaqarrao@gmail.com</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+				<div class="align-self-stretch box text-center p-4 shadow">
+					<div class="icon d-flex align-items-center justify-content-center">
+						<span class="icon-linkedin"></span>
+					</div>
+					<div>
+						<h3 class="mb-4">LinkedIn</h3>
+						<p><a href="https://www.linkedin.com/in/wrvicky/" target="_blank">Visit Profile</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+				<div class="align-self-stretch box text-center p-4 shadow">
+					<div class="icon d-flex align-items-center justify-content-center">
+						<span class="icon-whatsapp"></span>
+					</div>
+					<div>
+						<h3 class="mb-4">WhatsApp</h3>
+						<p><a href="https://mysig.io/zyrM3VVn" target="_blank">+ 92 333 3834354</a></p>
+					</div>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-3 d-flex ftco-animate">
+				<div class="align-self-stretch box text-center p-4 shadow">
+					<div class="icon d-flex align-items-center justify-content-center">
+						<span class="icon-github"></span>
+					</div>
+					<div>
+						<h3 class="mb-4">GitHub</h3>
+						<p><a href="https://github.com/waqar354" target="_blank">Visit Profile</a></p>
+					</div>
+				</div>
+			</div>
         </div>
 
         <div class="row no-gutters block-9">
@@ -937,8 +936,6 @@
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
-
-
   <script src="js/jquery.min.js"></script>
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
